# hop

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DESIGN.md  LICENSE  README.md  release-plz.toml  rustfmt.toml  skills-lock.json
.claude/skills/: garden-docs
.github/: CODEOWNERS
.github/workflows/: ci.yml  release-plz.yml  release.yml  semantic-pr.yml
demo/: demo.tape  record.sh  seed.py
docs/: ARCHITECTURE.md  ARCHITECTURE_REVIEW.md  PROJECT.md  RELEASE.md  RUST_GUIDELINES.md
docs/plans/: 2026-06-13-tui-bindings-table.md  2026-06-13-tui-responsiveness.md  2026-06-13-tui-results-table.md  2026-06-13-tui-screen-states.md  2026-06-13-tui-scroll-affordances.md  2026-06-13-tui-theme-system.md  2026-07-11-tier-1-codex-adapter-correctness.md  codex-2026-06-05-review-action-plan.md  superpowers-2026-06-04-hop.md
docs/reviews/: 2026-06-05-architecture-rust-tui-review.md  2026-06-05-popular-tui-research.md  2026-06-05-tui-keymap-review.md  2026-06-13-tui-design-review.md  2026-07-11-codex-inspired-improvements.md
docs/specs/: 2026-06-04-hop-design.md  2026-06-05-product-spec.md  2026-06-28-hook-based-metadata-design.md  PRODUCT_SPEC.md  README.md  superpowers-2026-06-04-hop-tui-v2-design.md
docs/superpowers/plans/: 2026-06-04-hop-tui-v2.md  2026-06-28-hook-based-metadata.md
openspec/changes/archive/2026-07-21-add-kwic-ellipsis/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-21-config-commands/: README.md  design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-21-fix-preview-resize-binds/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-21-fold-preview-into-display/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-21-footer-right-priority/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-21-in-app-upgrade-notice/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-21-inline-toolbar/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-21-preview-role-accents/: tasks.md  (+4 more)
openspec/changes/split-tui-view-and-mod/: tasks.md
openspec/specs/adapter-claude/: spec.md
openspec/specs/adapter-codex/: spec.md
openspec/specs/adapter-cursor/: spec.md
openspec/specs/adapter-trait/: spec.md
openspec/specs/card-rows/: spec.md
openspec/specs/cli/: spec.md
openspec/specs/config/: spec.md
openspec/specs/config-commands/: spec.md
openspec/specs/configuration/: spec.md
openspec/specs/core-types/: spec.md
openspec/specs/engine/: spec.md
openspec/specs/enrich/: spec.md
openspec/specs/footer/: spec.md
openspec/specs/hooks/: spec.md
openspec/specs/mouse-scroll/: spec.md
openspec/specs/preview-rendering/: spec.md
openspec/specs/preview-role-accents/: spec.md
openspec/specs/query-dsl/: spec.md
openspec/specs/resume/: spec.md
openspec/specs/search-index/: spec.md
openspec/specs/search-snippets/: spec.md
openspec/specs/tui-app-state/: spec.md
openspec/specs/tui-code-organization/: spec.md
openspec/specs/tui-columns/: spec.md
openspec/specs/tui-help/: spec.md
openspec/specs/tui-icons/: spec.md
openspec/specs/tui-input/: spec.md
openspec/specs/tui-keymap/: spec.md
openspec/specs/tui-modal/: spec.md
openspec/specs/tui-theme/: spec.md
openspec/specs/tui-toolbar/: spec.md
openspec/specs/update-checker/: spec.md
src/: cli.rs  columns.rs  config.rs  core.rs  engine.rs  index.rs  lib.rs  main.rs  query.rs  resume.rs  update.rs
src/adapters/: claude.rs  codex.rs  cursor.rs  mod.rs
src/config/: commands.rs  mod.rs
src/enrich/: gh_pr.rs  mod.rs  service.rs
src/hooks/: capture.rs  git_meta.rs  merge.rs  mod.rs  providers.rs  sidecar.rs
src/tui/: app_state.rs  app_tests.rs  columns.rs  glyphs.rs  help.rs  input.rs  keymap.rs  mod.rs  modal.rs  preview.rs  results_list.rs  theme.rs  toolbar.rs  view.rs
src/tui/view/: cards.rs  footer.rs  mod.rs  preview_header.rs  test_support.rs  tests_footer.rs  tests_layout.rs  tests_list.rs  tests_modal.rs  tests_preview.rs
tests/: claude_adapter.rs  codex_adapter.rs  cursor_adapter.rs  git_remote_url.rs  index_sync.rs
tests/fixtures/claude/: sample.jsonl
tests/fixtures/codex/: rollout-2026-06-04T10-00-00-codexsample.jsonl
tests/fixtures/cursor/: blocked.jsonl  errored-after-reply.jsonl  hook-sidecar.jsonl  redacted.jsonl  sample.jsonl
(+43 files in other folders)
