[package]
name = "hop"
version = "0.2.1"
edition = "2021"
description = "Fast full-text search and resume for coding-agent sessions"
license = "MIT"

[[bin]]
name = "hop"
path = "src/main.rs"

[lib]
name = "hop"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
thiserror = "2"
clap = { version = "4.6", features = ["derive"] }
tantivy = "0.26"
ratatui = "0.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simd-json = "0.17"
jiff = "0.2"
directories = "6"
toml = "0.8"
syntect = { version = "5.2", default-features = false, features = ["default-syntaxes", "default-themes", "regex-onig"] }
pulldown-cmark = { version = "0.12", default-features = false }
rusqlite = { version = "0.32", features = ["bundled"] }
md5 = "0.7"
hex = "0.4"

[dev-dependencies]
tempfile = "3"
