[package]
name = "hop"
version = "0.2.6"
edition = "2021"
description = "Fast full-text search and resume for coding-agent sessions"
license = "MIT"
# Resume uses Unix exec(2) to replace the process; not portable to Windows.
readme = "README.md"

[[bin]]
name = "hop"
path = "src/main.rs"

[lib]
name = "hop"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
thiserror = "2"
clap = { version = "4.6", features = ["derive"] }
tantivy = { version = "0.26", default-features = false, features = ["mmap", "lz4-compression", "columnar-zstd-compression"] }
ratatui = "0.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simd-json = "0.17"
jiff = "0.2"
directories = "6"
toml = "0.8"
syntect = { version = "5.2", default-features = false, features = ["default-syntaxes", "default-themes", "regex-fancy"] }
pulldown-cmark = { version = "0.12", default-features = false }
rusqlite = { version = "0.40", features = ["bundled"] }
md5 = "0.7"
hex = "0.4"
shlex = "2"
ureq = { version = "3", default-features = false, features = ["json", "native-tls", "gzip"] }
semver = "1"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
