[package]
name = "hop"
version = "0.2.9"
edition = "2024"
description = "Fast full-text search and resume for coding-agent sessions"
license = "MIT"
# Resume uses Unix exec(2) to replace the process; not portable to Windows.
readme = "README.md"

[[bin]]
name = "hop"
path = "src/main.rs"

[lib]
name = "hop"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
clap = { version = "4.6", features = ["derive"] }
tantivy = { version = "0.26", default-features = false, features = ["mmap", "lz4-compression", "columnar-zstd-compression"] }
ratatui = "0.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simd-json = "0.17"
jiff = "0.2"
directories = "6"
toml = "1.1"
syntect = { version = "5.2", default-features = false, features = ["default-syntaxes", "default-themes", "regex-fancy"] }
pulldown-cmark = { version = "0.13", default-features = false }
rusqlite = { version = "0.40", features = ["bundled"] }
md5 = "0.8"
hex = "0.4"
shlex = "2"
ureq = { version = "3", default-features = false, features = ["json", "native-tls", "gzip"] }
semver = "1"
zstd = "0.13"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

# Lint policy, kept in-tree so contributors and IDEs see the same contract CI
# enforces (`cargo clippy --all-targets --all-features -- -D warnings`). Deliberately
# pragmatic: we take `clippy::all` plus a small set of high-signal restriction lints
# rather than the full `pedantic`/`nursery` groups. Any future opt-out belongs here
# with a one-line reason.
[lints.rust]
unsafe_op_in_unsafe_fn = "warn"
unused_unsafe = "warn"

[lints.clippy]
# Enable the whole group at low priority so individual rules below can override it.
all = { level = "warn", priority = -1 }
# Avoid accidental heap clones of ref-counted pointers; forces explicit Rc/Arc::clone.
clone_on_ref_ptr = "warn"
# `s.push_str(&format!(..))` allocates an intermediate String; use `write!`/`push_str`.
format_push_string = "warn"
# Debugging and stub macros must never reach a release build.
dbg_macro = "warn"
todo = "warn"
unimplemented = "warn"
# Every `unsafe` block must carry a `// SAFETY:` justification.
undocumented_unsafe_blocks = "warn"
